--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.15.1",
-    "nuxt": "^2.15.7"
+    "endent": "^2.1.0",
+    "nuxt": "^2.15.7",
+    "tinycolor2": "^1.4.2",
+    "vue-mermaid-string": "^2.2.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
@@ -32,7 +35,7 @@
     "eslint": "^7.29.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^2.0.0",
-    "eslint-plugin-vue": "^7.12.1",
+    "eslint-plugin-vue": "^8.2.0",
     "husky": "^6.0.0",
     "lint-staged": "^10.5.4",
     "prettier": "^2.3.2",
